--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <i>Our doors will make your life safer and more comfortable!</i>
             </p>
             <ul>
-                <li>high quality</li>
-                <li>producer price</li>
-                <li>size under the order</li>
-                <li>deadline</li>
-                <li>warranty and service</li>
-                <li>delivery and installation</li>
+                <li><img src="img/quality.jpg" alt="Quality">high quality</li>
+                <li><img src="img/price.jpg" alt="Price">producer price</li>
+                <li><img src="img/size.jpg" alt="Size">size under the order</li>
+                <li><img src="img/deadline.jpg" alt="Deadline">deadline</li>
+                <li><img src="img/service.jpg" alt="Service">warranty and service</li>
+                <li><img src="img/delivery.jpg" alt="Delivery">delivery and installation</li>
             </ul>
         </section>
         <section id="about_us">
