--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </figure>
             <figure>
                 <figcaption>MDF doors</figcaption>
-                <img src="img/steell_door_two.jpg" alt="MDF door img1">
+                <img src="img/mdf_door_three.jpg" alt="MDF door img1">
             </figure>
         </section>
         <div id="contact">
@@ -79,7 +79,7 @@
         </div>
         <div id="form">
             <h3>To call our specialist please fill out and send the form below</h3>
-            <form method="POST" action="https://formspree.io/tigory8@gmail.com">
+            <form method="POST" action="https://formspree.io/"#">
                 <br>
                 <fieldset>
                     <label for="client-name">Name:</label>
