--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Brone doors</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
         <div>
-            <img src="img/header.png" alt="Header">
+            <img src="img/header.png" alt="Header_img">
         </div>
-        <div>
         <nav>
             <ul>
                 <li>
@@ -31,15 +31,16 @@
                 </li>
             </ul>
         </nav>
-        </div>
     </header>
     <main>
         <section id="home">
             <h1><strong>Steell and MDF doors from manufacture!</strong></h1>
-            <img src="img/house.jpg" alt="House">
+            <div class="baner">
+            <img src="img/house.jpg" alt="House-img">
             <p>
-                <i>Our doors will make your life safer and more comfortable!</i>
+                Our doors will make your life safer and more comfortable!
             </p>
+            </div>
             <ul>
                 <li><img src="img/quality.jpg" alt="Quality">high quality</li>
                 <li><img src="img/price.jpg" alt="Price">producer price</li>
@@ -79,7 +80,7 @@
         </div>
         <div id="form">
             <h3>To call our specialist please fill out and send the form below</h3>
-            <form method="POST" action="https://formspree.io/"#">
+            <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                 <br>
                 <fieldset>
                     <label for="client-name">Name:</label>
