--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#form">Order form</a>
+                    <a href="#form">Order</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="home">
-            <h1><strong>Steell and MDF doors from manufacture!</strong></h1>
+            <h1>Steell and MDF doors from manufacture!</h1>
             <div class="baner">
             <img src="img/house.jpg" alt="House-img">
             <p>
