--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div>
+         <div>
             <img src="img/header.png" alt="Header_img">
         </div>
         <nav>
@@ -18,29 +18,26 @@
                     <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#about_us">About us</a>
+                    <a href="#about_us">About_Us</a>
                 </li>
                 <li>
                     <a href="#products">Products</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact">Contacts</a>
                 </li>
                 <li>
                     <a href="#form">Order</a>
                 </li>
             </ul>
         </nav>
+        <div class="banner">
+           <h1>Steell and MDF doors from manufacture!</h1> 
+        </div>
     </header>
     <main>
         <section id="home">
-            <h1>Steell and MDF doors from manufacture!</h1>
-            <div class="baner">
-            <img src="img/house.jpg" alt="House-img">
-            <p>
-                Our doors will make your life safer and more comfortable!
-            </p>
-            </div>
+            <h3>Our doors will make your life safer and more comfortable!</h3>
             <ul>
                 <li><img src="img/quality.jpg" alt="Quality">high quality</li>
                 <li><img src="img/price.jpg" alt="Price">producer price</li>
