--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-         <div>
+        <div>
             <img src="img/header.png" alt="Header_img">
         </div>
         <nav>
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <div class="banner">
-           <h1>Steell and MDF doors from manufacture!</h1> 
+           <h1>Steell and MDF doors from manufacture - Brone Doors!</h1> 
         </div>
     </header>
     <main>
