--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div>
-            <img src="img/header.png" alt="Header_img">
+            <img src="img/header.png" alt="Header">
         </div>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="#home">Home</a>
                 </li>
@@ -37,7 +37,9 @@
     </header>
     <main>
         <section id="home">
-            <h3>Our doors will make your life safer and more comfortable!</h3>
+            <div class="motto">
+                <h2>Our doors will make your life safer and more comfortable!</h2>
+            </div>
             <ul>
                 <li><img src="img/quality.jpg" alt="Quality">high quality</li>
                 <li><img src="img/price.jpg" alt="Price">producer price</li>
@@ -102,9 +104,9 @@
     </main>
     <footer>
         <span>Published 20 April 2019</span>
-        <figure>
+        <div>
             <img src="img/footer.png" alt="Footer">
-        </figure>
+        </div>
     </footer>
 </body>
 </html>
