--- a/index.html
+++ b/index.html
@@ -42,14 +42,32 @@
             <div class="motto">
                 <h2>Our doors will make your life safer and more comfortable!</h2>
             </div>
-            <ul>
-                <li><img src="img/quality.jpg" alt="Quality">high quality</li>
-                <li><img src="img/price.jpg" alt="Price">producer price</li>
-                <li><img src="img/size.jpg" alt="Size">size under the order</li>
-                <li><img src="img/deadline.jpg" alt="Deadline">deadline</li>
-                <li><img src="img/service.jpg" alt="Service">warranty and service</li>
-                <li><img src="img/delivery.jpg" alt="Delivery">delivery and installation</li>
-            </ul>
+            <div class="wrapper">
+                <div class="box">
+                    <img src="img/quality.jpg" alt="Quality">
+                </div> 
+                <div>high quality</div>
+                <div class="box">
+                    <img src="img/price.jpg" alt="Price">
+                </div> 
+                <div>producer price</div>
+                <div class="box">
+                    <img src="img/size.jpg" alt="Size">
+                </div> 
+                <div>size under the order</div>
+                <div class="box">
+                    <img src="img/deadline.jpg" alt="Deadline">
+                </div> 
+                <div>deadline</div>
+                <div class="box">
+                    <img src="img/service.jpg" alt="Service">
+                </div> 
+                <div>warranty and service</div>
+                <div class="box">
+                    <img src="img/delivery.jpg" alt="Delivery">
+                </div>
+                <div>delivery and installation</div>
+            </div>
         </section>
         <section id="about_us">
             <h3>About us</h3>
