--- a/index.html
+++ b/index.html
@@ -42,31 +42,32 @@
             <div class="motto">
                 <h2>Our doors will make your life safer and more comfortable!</h2>
             </div>
-            <div class="wrapper">
-                <div class="box">
+            <div class="grid">
+                <div class="g-box box1">
                     <img src="img/quality.jpg" alt="Quality">
-                </div> 
-                <div>high quality</div>
-                <div class="box">
+                    <div><p>high quality</p></div>
+                </div>
+                <div class="g-box box2">high quality</div>
+                <div class="g-box">
                     <img src="img/price.jpg" alt="Price">
-                </div> 
-                <div>producer price</div>
-                <div class="box">
+                </div>
+                <div class="g-box">producer price</div>
+                <div class="g-box">
                     <img src="img/size.jpg" alt="Size">
-                </div> 
-                <div>size under the order</div>
-                <div class="box">
+                </div>
+                <div class="g-box">size under the order</div>
+                <div class="g-box">
                     <img src="img/deadline.jpg" alt="Deadline">
-                </div> 
-                <div>deadline</div>
-                <div class="box">
+                </div>
+                <div class="g-box">deadline</div>
+                <div class="g-box">
                     <img src="img/service.jpg" alt="Service">
-                </div> 
-                <div>warranty and service</div>
-                <div class="box">
+                </div>
+                <div class="g-box">warranty and service</div>
+                <div class="g-box">
                     <img src="img/delivery.jpg" alt="Delivery">
                 </div>
-                <div>delivery and installation</div>
+                <div class="g-box">delivery and installation</div>
             </div>
         </section>
         <section id="about_us">
@@ -108,7 +109,7 @@
                     <label for="client-email">
             Email: <input type="email" placeholder="Email"
             id="client-email" name="client-email" required>
-            </label>
+                    </label>
                     <br>
                     <label for="client-address">Address:</label>
                     <input type="text" placeholder="Address" id="client-address" name="client-address" required>
