--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <div class="grid">
                 <div class="g-box box1">
                     <img src="img/quality.jpg" alt="Quality">
-                    <div><p>high quality</p></div>
                 </div>
                 <div class="g-box box2">high quality</div>
                 <div class="g-box">
@@ -73,7 +72,10 @@
         <section id="about_us">
             <h3>About us</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Alias, laudantium placeat similique corporis ex! Iure, fugiat,
+                iste eveniet dolore illo est sit quisquam. Quam, perferendis,
+                deserunt ipsum temporibus.
             </p>
         </section>
         <section id="products">
@@ -124,7 +126,7 @@
         </div>
     </main>
     <footer>
-        <span>Published 20 April 2019</span>
+        <p><span>Published 20 April 2019</span></p>
         <div>
             <img src="img/footer.png" alt="Footer">
         </div>
