--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
         <section id="about_us">
             <h3>About us</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Alias, laudantium placeat similique corporis ex! Iure, fugiat,
-                iste eveniet dolore illo est sit quisquam. Quam, perferendis,
-                deserunt ipsum temporibus.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus.
             </p>
         </section>
         <section id="products">
@@ -90,15 +87,26 @@
             </figure>
         </section>
         <div id="contact">
-            <h3>Our contacts</h3>
-            <ul>
-                <li><img src="img/email.jpg" alt="Email">brone_doors@gmail.com</li>
-                <li><img src="img/earth.jpg" alt="Site">https://www.brone_doors.com.ua</li>
-                <li><img src="img/telephones.jpg" alt="telephones">(032) 100-00-00</li>
-                <li>(097) 100-00-00</li>
-                <li><img src="img/people.jpg" alt="Address">70050 Lviv st.Naukova, 25</li>
-            </ul>
-            <img src="img/map.jpg" alt="Map of our location">
+            <div class="contact-inf">
+                <div>
+                    <h3>Our contacts</h3>
+                </div>
+                <div>
+                    <img src="img/email.jpg" alt="Email">brone_doors@gmail.com
+                </div>
+                <div>
+                    <img src="img/earth.jpg" alt="Site">https://www.brone_doors.com.ua
+                </div>
+                <div>
+                    <img src="img/telephones.jpg" alt="telephones">(032) 100-00-00 (097) 100-00-00
+                </div>
+                <div>
+                    <img src="img/people.jpg" alt="Address">70050 Lviv st.Naukova, 25
+                </div>
+            </div>
+            <div class="map">
+                    <img src="img/map.jpg" alt="Map of our location">
+            </div>
         </div>
         <div id="form">
             <h3>To call our specialist please fill out and send the form below</h3>
