--- a/index.html
+++ b/index.html
@@ -88,21 +88,25 @@
         </section>
         <div id="contact">
             <div class="contact-inf">
-                <div>
-                    <h3>Our contacts</h3>
+                <h3 >Our contacts</h3>
+            </div>
+            <div class="grid-cont">
+                <div class="c-box box1">
+                    <img src="img/email.jpg" alt="Email">
                 </div>
-                <div>
-                    <img src="img/email.jpg" alt="Email">brone_doors@gmail.com
+                <div class="c-box box2">brone_doors@gmail.com</div>
+                <div class="c-box">
+                    <img src="img/earth.jpg" alt="Site">
                 </div>
-                <div>
-                    <img src="img/earth.jpg" alt="Site">https://www.brone_doors.com.ua
+                <div class="c-box">https://www.brone_doors.com.ua</div>
+                <div class="c-box">
+                    <img src="img/telephones.jpg" alt="telephones">
                 </div>
-                <div>
-                    <img src="img/telephones.jpg" alt="telephones">(032) 100-00-00 (097) 100-00-00
+                <div class="c-box">(032) 100-00-00 (097) 100-00-00</div>
+                <div class="c-box">
+                    <img src="img/people.jpg" alt="Address">
                 </div>
-                <div>
-                    <img src="img/people.jpg" alt="Address">70050 Lviv st.Naukova, 25
-                </div>
+                <div class="c-box">70050 Lviv st.Naukova, 25</div>
             </div>
             <div class="map">
                     <img src="img/map.jpg" alt="Map of our location">
