--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+
     <title>Brone doors</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -43,7 +43,7 @@
             <div class="motto">
                 <h2>Our doors will make your life safer and more comfortable!</h2>
                 <div class="clock"></div>
-            <button class="clockToggle">Hide Clock</button>
+                <button class="clockToggle">Hide Clock</button>
             </div>
             <div class="grid">
                 <div class="g-box box1">
@@ -91,7 +91,7 @@
         </section>
         <div id="contact">
             <div class="contact-inf">
-                <h3 >Our contacts</h3>
+                <h3>Our contacts</h3>
             </div>
             <div class="grid-cont">
                 <div class="c-box box1">
@@ -112,7 +112,7 @@
                 <div class="c-box">70050 Lviv st.Naukova, 25</div>
             </div>
             <div class="map">
-                    <img src="img/map.jpg" alt="Map of our location">
+                <img src="img/map.jpg" alt="Map of our location">
             </div>
         </div>
         <div id="form">
@@ -139,18 +139,21 @@
                 </fieldset>
             </form>
         </div>
-         <section>
-        <h1>Approximate cost calculation of door</h1>
-        <form class="converter">
-            <label>
-                Result: <input type="text" name="resultOfCalculation">
-            <label>
+        <section>
+            <h1>Approximate cost calculation of door</h1>
+            <form class="converter">
+                <label>
+                Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
+            </label>
+                <br>
+                <button class="calculation">Calculation</button>
+                <br>
+                <button class="exchange-rate">course UAH to selected currency</button>
+                <label>
                 <output type="text" name="curr-converted"></output>
             </label>
-            <br>
-            <button class="exchange-rate">UAH to selected currency</button>
-        </form>
-    </section>
+            </form>
+        </section>
     </main>
     <footer>
         <p><span>Published 20 April 2019</span></p>
