--- a/index.html
+++ b/index.html
@@ -5,162 +5,223 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Brone doors</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <header>
-        <div>
-            <img src="img/header.png" alt="Header">
-        </div>
-        <nav>
-            <ul class="menu">
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#about_us">About_Us</a>
-                </li>
-                <li>
-                    <a href="#products">Products</a>
-                </li>
-                <li>
-                    <a href="#contact">Contacts</a>
-                </li>
-                <li>
-                    <a href="#form">Order</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <h1>Steell and MDF doors from manufacture - Brone Doors!</h1>
-        </div>
-    </header>
-    <main>
-        <section id="home">
-            <div class="motto">
-                <h2>Our doors will make your life safer and more comfortable!</h2>
-                <div class="clock"></div>
-                <button class="clockToggle">Hide Clock</button>
+    <div class="container">
+        <header>
+            <div>
+                <img src="img/header.png" alt="Header">
             </div>
-            <div class="grid">
-                <div class="g-box box1">
-                    <img src="img/quality.jpg" alt="Quality">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Brone Doors</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about_us">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#products">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contacts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#form">Order</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="g-box box2">high quality</div>
-                <div class="g-box">
-                    <img src="img/price.jpg" alt="Price">
-                </div>
-                <div class="g-box">producer price</div>
-                <div class="g-box">
-                    <img src="img/size.jpg" alt="Size">
-                </div>
-                <div class="g-box">size under the order</div>
-                <div class="g-box">
-                    <img src="img/deadline.jpg" alt="Deadline">
-                </div>
-                <div class="g-box">deadline</div>
-                <div class="g-box">
-                    <img src="img/service.jpg" alt="Service">
-                </div>
-                <div class="g-box">warranty and service</div>
-                <div class="g-box">
-                    <img src="img/delivery.jpg" alt="Delivery">
-                </div>
-                <div class="g-box">delivery and installation</div>
+            </nav>
+            <div class="banner">
+                <h1>Steell and MDF doors from manufacture - Brone Doors!</h1>
             </div>
-        </section>
-        <section id="about_us">
-            <h3>About us</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus.
-            </p>
-        </section>
-        <section id="products">
-            <h3>Our products</h3>
-            <figure>
-                <figcaption>Steell doors</figcaption>
-                <img src="img/steell_door_one.jpg" alt="Steell door img1">
-            </figure>
-            <figure>
-                <figcaption>MDF doors</figcaption>
-                <img src="img/mdf_door_three.jpg" alt="MDF door img1">
-            </figure>
-        </section>
-        <div id="contact">
-            <div class="contact-inf">
-                <h3>Our contacts</h3>
+        </header>
+        <main>
+            <section id="home">
+                <div class="motto">
+                    <h2>Our doors will make your life safer and more comfortable!</h2>
+                    <div class="clock"></div>
+                    <button class="clockToggle">Hide Clock</button>
+                </div>
+                <div class="grid">
+                    <div class="g-box box1">
+                        <img src="img/quality.jpg" alt="Quality">
+                    </div>
+                    <div class="g-box box2">high quality</div>
+                    <div class="g-box">
+                        <img src="img/price.jpg" alt="Price">
+                    </div>
+                    <div class="g-box">producer price</div>
+                    <div class="g-box">
+                        <img src="img/size.jpg" alt="Size">
+                    </div>
+                    <div class="g-box">size under the order</div>
+                    <div class="g-box">
+                        <img src="img/deadline.jpg" alt="Deadline">
+                    </div>
+                    <div class="g-box">deadline</div>
+                    <div class="g-box">
+                        <img src="img/service.jpg" alt="Service">
+                    </div>
+                    <div class="g-box">warranty and service</div>
+                    <div class="g-box">
+                        <img src="img/delivery.jpg" alt="Delivery">
+                    </div>
+                    <div class="g-box">delivery and installation</div>
+                </div>
+            </section>
+            <section id="about_us">
+                <h3>About us</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus.
+                </p>
+            </section>
+            <section id="products">
+                <h3>Our products</h3>
+                <figure>
+                    <figcaption>Steell doors</figcaption>
+                    <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="1"></li>
+                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/steell_door_one.jpg" class="d-block w-100" alt="Steell door img1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/steell_door_two.jpg" class="d-block w-100" alt="Steell door img2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/steell_door_three.jpg" class="d-block w-100" alt="Steell door img3">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+                        <a class="carousel-control-next" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+                    </div>
+                </figure>
+                <figure>
+                    <figcaption>MDF doors</figcaption>
+                    <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselProductsMdfDoors" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselProductsMdfDoors" data-slide-to="1"></li>
+                            <li data-target="#carouselProductsMdfDoors" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/steell_door_one.jpg" class="d-block w-100" alt="MDF door img1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mdf_door_two.jpg" class="d-block w-100" alt="MDelF door img2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mdf_door_three.jpg" class="d-block w-100" alt="MDF door img3">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselProductsMdfDoors" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+                        <a class="carousel-control-next" href="#carouselProductsMdfDoors" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+                    </div>
+                </figure>
+            </section>
+            <div id="contact">
+                <div class="contact-inf">
+                    <h3>Our contacts</h3>
+                </div>
+                <div class="grid-cont">
+                    <div class="c-box box1">
+                        <img src="img/email.jpg" alt="Email">
+                    </div>
+                    <div class="c-box box2">brone_doors@gmail.com</div>
+                    <div class="c-box">
+                        <img src="img/earth.jpg" alt="Site">
+                    </div>
+                    <div class="c-box">https://www.brone_doors.com.ua</div>
+                    <div class="c-box">
+                        <img src="img/telephones.jpg" alt="telephones">
+                    </div>
+                    <div class="c-box">(032) 100-00-00 (097) 100-00-00</div>
+                    <div class="c-box">
+                        <img src="img/people.jpg" alt="Address">
+                    </div>
+                    <div class="c-box">70050 Lviv st.Naukova, 25</div>
+                </div>
+                <div class="map">
+                    <img src="img/map.jpg" alt="Map of our location">
+                </div>
             </div>
-            <div class="grid-cont">
-                <div class="c-box box1">
-                    <img src="img/email.jpg" alt="Email">
-                </div>
-                <div class="c-box box2">brone_doors@gmail.com</div>
-                <div class="c-box">
-                    <img src="img/earth.jpg" alt="Site">
-                </div>
-                <div class="c-box">https://www.brone_doors.com.ua</div>
-                <div class="c-box">
-                    <img src="img/telephones.jpg" alt="telephones">
-                </div>
-                <div class="c-box">(032) 100-00-00 (097) 100-00-00</div>
-                <div class="c-box">
-                    <img src="img/people.jpg" alt="Address">
-                </div>
-                <div class="c-box">70050 Lviv st.Naukova, 25</div>
-            </div>
-            <div class="map">
-                <img src="img/map.jpg" alt="Map of our location">
-            </div>
-        </div>
-        <div id="form">
-            <h3>To call our specialist please fill out and send the form below</h3>
-            <form method="POST" action="https://formspree.io/tigory8@gmail.com">
-                <br>
-                <fieldset>
-                    <label for="client-name">Name:</label>
-                    <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+            <div id="form">
+                <h3>To call our specialist please fill out and send the form below</h3>
+                <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                     <br>
-                    <label for="client-email">
+                    <fieldset>
+                        <label for="client-name">Name:</label>
+                        <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+                        <br>
+                        <label for="client-email">
             Email: <input type="email" placeholder="Email"
             id="client-email" name="client-email" required>
                     </label>
-                    <br>
-                    <label for="client-address">Address:</label>
-                    <input type="text" placeholder="Address" id="client-address" name="client-address" required>
-                    <br>
-                    <label for="client-comment">Your comment:</label>
-                    <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
-                    <br>
-                    <input type="submit" value="Submit">
-                    <input type="reset" value="Cancel">
-                </fieldset>
-            </form>
-        </div>
-        <section>
-            <h1>Approximate cost calculation of door</h1>
-            <form class="converter">
-                <label>
+                        <br>
+                        <label for="client-address">Address:</label>
+                        <input type="text" placeholder="Address" id="client-address" name="client-address" required>
+                        <br>
+                        <label for="client-comment">Your comment:</label>
+                        <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
+                        <br>
+                        <input type="submit" value="Submit">
+                        <input type="reset" value="Cancel">
+                    </fieldset>
+                </form>
+            </div>
+            <div>
+                <h3>Approximate cost calculation of door</h1>
+                    <form class="converter">
+                        <label>
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
-                <br>
-                <button class="calculation">Calculation</button>
-                <br>
-                <button class="exchange-rate">course UAH to selected currency</button>
-                <label>
+                        <br>
+                        <button class="calculation">Calculation</button>
+                        <br>
+                        <button class="exchange-rate">course UAH to selected currency</button>
+                        <label>
                 <output type="text" name="curr-converted"></output>
             </label>
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p><span>Published 20 April 2019</span></p>
-        <div>
-            <img src="img/footer.png" alt="Footer">
-        </div>
-    </footer>
+                    </form>
+            </div>
+        </main>
+        <footer>
+            <p><span>Published 20 April 2019</span></p>
+            <div>
+                <img src="img/footer.png" alt="Footer">
+            </div>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
 
