--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             </section>
             <section id="products">
                 <h3>Our products</h3>
+                <div class="row">
+            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                 <figure>
                     <figcaption>Steell doors</figcaption>
                     <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
@@ -116,6 +118,8 @@
   </a>
                     </div>
                 </figure>
+                </article>
+                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                 <figure>
                     <figcaption>MDF doors</figcaption>
                     <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
@@ -145,6 +149,7 @@
   </a>
                     </div>
                 </figure>
+                </article>
             </section>
             <div id="contact">
                 <div class="contact-inf">
@@ -172,7 +177,8 @@
                     <img src="img/map.jpg" alt="Map of our location">
                 </div>
             </div>
-            <div id="form">
+            <div class="row">
+            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                 <h3>To call our specialist please fill out and send the form below</h3>
                 <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                     <br>
@@ -195,8 +201,8 @@
                         <input type="reset" value="Cancel">
                     </fieldset>
                 </form>
-            </div>
-            <div>
+            </article>
+            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                 <h3>Approximate cost calculation of door</h1>
                     <form class="converter">
                         <label>
@@ -210,7 +216,7 @@
                 <output type="text" name="curr-converted"></output>
             </label>
                     </form>
-            </div>
+            </article>
         </main>
         <footer>
             <p><span>Published 20 April 2019</span></p>
