--- a/index.html
+++ b/index.html
@@ -88,68 +88,68 @@
             <section id="products">
                 <h3>Our products</h3>
                 <div class="row">
-            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                <figure>
-                    <figcaption>Steell doors</figcaption>
-                    <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="1"></li>
-                            <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/steell_door_one.jpg" class="d-block w-100" alt="Steell door img1">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/steell_door_two.jpg" class="d-block w-100" alt="Steell door img2">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/steell_door_three.jpg" class="d-block w-100" alt="Steell door img3">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="prev">
+                    <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <figure>
+                            <figcaption>Steell doors</figcaption>
+                            <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="1"></li>
+                                    <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/steell_door_one.jpg" class="d-block w-100" alt="Steell door img1">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/steell_door_two.jpg" class="d-block w-100" alt="Steell door img2">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/steell_door_three.jpg" class="d-block w-100" alt="Steell door img3">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-                        <a class="carousel-control-next" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselProductsMdfDoorsSteellDoors" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-                    </div>
-                </figure>
-                </article>
-                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                <figure>
-                    <figcaption>MDF doors</figcaption>
-                    <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselProductsMdfDoors" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselProductsMdfDoors" data-slide-to="1"></li>
-                            <li data-target="#carouselProductsMdfDoors" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/steell_door_one.jpg" class="d-block w-100" alt="MDF door img1">
                             </div>
-                            <div class="carousel-item">
-                                <img src="img/mdf_door_two.jpg" class="d-block w-100" alt="MDelF door img2">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/mdf_door_three.jpg" class="d-block w-100" alt="MDF door img3">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselProductsMdfDoors" role="button" data-slide="prev">
+                        </figure>
+                    </article>
+                    <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <figure>
+                            <figcaption>MDF doors</figcaption>
+                            <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselProductsMdfDoors" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselProductsMdfDoors" data-slide-to="1"></li>
+                                    <li data-target="#carouselProductsMdfDoors" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/steell_door_one.jpg" class="d-block w-100" alt="MDF door img1">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/mdf_door_two.jpg" class="d-block w-100" alt="MDelF door img2">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/mdf_door_three.jpg" class="d-block w-100" alt="MDF door img3">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselProductsMdfDoors" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-                        <a class="carousel-control-next" href="#carouselProductsMdfDoors" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselProductsMdfDoors" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-                    </div>
-                </figure>
-                </article>
+                            </div>
+                        </figure>
+                    </article>
             </section>
             <div id="contact">
                 <div class="contact-inf">
@@ -178,45 +178,50 @@
                 </div>
             </div>
             <div class="row">
-            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                <h3>To call our specialist please fill out and send the form below</h3>
-                <form method="POST" action="https://formspree.io/tigory8@gmail.com">
-                    <br>
-                    <fieldset>
-                        <label for="client-name">Name:</label>
-                        <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                    <h3>To call our specialist please fill out and send the form below</h3>
+                    <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                         <br>
-                        <label for="client-email">
+                        <fieldset>
+                            <label for="client-name">Name:</label>
+                            <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+                            <br>
+                            <label for="client-email">
             Email: <input type="email" placeholder="Email"
             id="client-email" name="client-email" required>
                     </label>
-                        <br>
-                        <label for="client-address">Address:</label>
-                        <input type="text" placeholder="Address" id="client-address" name="client-address" required>
-                        <br>
-                        <label for="client-comment">Your comment:</label>
-                        <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
-                        <br>
-                        <input type="submit" value="Submit">
-                        <input type="reset" value="Cancel">
-                    </fieldset>
-                </form>
-            </article>
-            <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                <h3>Approximate cost calculation of door</h1>
-                    <form class="converter">
-                        <label>
+                            <br>
+                            <label for="client-address">Address:</label>
+                            <input type="text" placeholder="Address" id="client-address" name="client-address" required>
+                            <br>
+                            <label for="client-comment">Your comment:</label>
+                            <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
+                            <br>
+                            <input type="submit" value="Submit">
+                            <input type="reset" value="Cancel">
+                        </fieldset>
+                    </form>
+                </article>
+                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                    <h3>Approximate cost calculation of door</h1>
+                        <form class="converter">
+                            <label>
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
-                        <br>
-                        <button class="calculation">Calculation</button>
-                        <br>
-                        <button class="exchange-rate">course UAH to selected currency</button>
-                        <label>
+                            <br>
+                            <button class="calculation">Calculation</button>
+                            <input type="submit" value="save">
+                            <input class="load" type="button" value="load">
+                            <br>
+                            <button class="exchange-rate">course UAH to selected currency</button>
+                            <br>
+                            <label>
                 <output type="text" name="curr-converted"></output>
             </label>
-                    </form>
-            </article>
+                            <textarea rows="7" cols="33">
+        </textarea>
+                        </form>
+                </article>
         </main>
         <footer>
             <p><span>Published 20 April 2019</span></p>
@@ -224,11 +229,11 @@
                 <img src="img/footer.png" alt="Footer">
             </div>
         </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
