--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
                 <h3>Our products</h3>
                 <div class="row">
                     <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <h3>Steell doors</h3>
                         <figure>
-                            <figcaption>Steell doors</figcaption>
+                            <figcaption></figcaption>
                             <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="0" class="active"></li>
@@ -120,8 +121,9 @@
                         </figure>
                     </article>
                     <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <h3>MDF doors</h3>
                         <figure>
-                            <figcaption>MDF doors</figcaption>
+                            <figcaption></figcaption>
                             <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselProductsMdfDoors" data-slide-to="0" class="active"></li>
@@ -130,7 +132,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/steell_door_one.jpg" class="d-block w-100" alt="MDF door img1">
+                                        <img src="img/mdf_door_one.jpg" class="d-block w-100" alt="MDF door img1">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="img/mdf_door_two.jpg" class="d-block w-100" alt="MDelF door img2">
@@ -150,6 +152,7 @@
                             </div>
                         </figure>
                     </article>
+                </div>
             </section>
             <div id="contact">
                 <div class="contact-inf">
@@ -203,25 +206,28 @@
                     </form>
                 </article>
                 <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                    <h3>Approximate cost calculation of door</h1>
-                        <form class="converter">
-                            <label>
+                    <h3>Approximate cost calculation of door</h3>
+                    <form class="converter">
+                        <label>
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
-                            <br>
-                            <button class="calculation">Calculation</button>
-                            <input type="submit" value="save">
-                            <input class="load" type="button" value="load">
-                            <br>
-                            <button class="exchange-rate">course UAH to selected currency</button>
-                            <br>
-                            <label>
+                        <br>
+                        <button class="calculation">Calculation</button>
+                        <br>
+                        <button class="exchange-rate">course UAH to selected currency</button>
+                        <br>
+                        <label>
                 <output type="text" name="curr-converted"></output>
             </label>
-                            <textarea rows="7" cols="33">
-        </textarea>
-                        </form>
+                    </form>
+                    <form>
+                        <textarea rows="7" cols="33">
+                    </textarea>
+                    <input type="submit" value="save">
+                    <input class="load" type="button" value="load">
+                    </form>
                 </article>
+            </div>
         </main>
         <footer>
             <p><span>Published 20 April 2019</span></p>
@@ -229,11 +235,11 @@
                 <img src="img/footer.png" alt="Footer">
             </div>
         </footer>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="js/index.js"></script>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
