--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
                     </div>
                     <div class="c-box">70050 Lviv st.Naukova, 25</div>
                 </div>
-                <div class="map">
-                    <img src="img/map.jpg" alt="Map of our location">
-                </div>
+            </div>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1820.9044227492468!2d23.991556006776502!3d49.80209026124684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7bb2a204d0b%3A0x809f6e33e33c5ab4!2sNaukova+Street%2C+25%2C+L&#39;viv%2C+L&#39;vivs&#39;ka+oblast%2C+79000!5e0!3m2!1sen!2sua!4v1557646464806!5m2!1sen!2sua"
+                    width="500" height="300" allowfullscreen></iframe>
             </div>
             <div class="row">
                 <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
@@ -223,8 +224,8 @@
                     <form>
                         <textarea rows="7" cols="33">
                     </textarea>
-                    <input type="submit" value="save">
-                    <input class="load" type="button" value="load">
+                        <input type="submit" value="save">
+                        <input class="load" type="button" value="load">
                     </form>
                 </article>
             </div>
