--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="img/header.png" alt="Header">
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Brone Doors</a>
+                <a class="navbar-brand" href="#home">Brone Doors</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -82,7 +82,10 @@
             <section id="about_us">
                 <h3>About us</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus.
+                    The firm – “Brone-Door” was founded more than 15 years ago. In the beginning, the main activity of the firm was manufacture of metal doors with different decorative coatings and providing services for measurements and installation and warranty service
+                    of our products. Additionally we started the production of MDF doors near 5 years ago. When we making our products, we try to take into account all the wishes of our customers regarding: the sizes, materials, colors and the use door’s
+                    accessories of the world famous brands Gerda, Mul-T-Lock, Abloy etc. We also offer our clients not only a responsible attitude but also short deadlines for fulfilling orders, high quality products and warranty and pessimistic service.
+                    Thanks to hard work and the established dealer network, our products are sold throughout the territory of Ukraine. We always happy for constructive cooperation and your orders.
                 </p>
             </section>
             <section id="products">
@@ -91,7 +94,6 @@
                     <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                         <h3>Steell doors</h3>
                         <figure>
-                            <figcaption></figcaption>
                             <div id="carouselProductsMdfDoorsSteellDoors" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselProductsMdfDoorsSteellDoors" data-slide-to="0" class="active"></li>
@@ -123,7 +125,6 @@
                     <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                         <h3>MDF doors</h3>
                         <figure>
-                            <figcaption></figcaption>
                             <div id="carouselProductsMdfDoors" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselProductsMdfDoors" data-slide-to="0" class="active"></li>
@@ -178,56 +179,52 @@
                 </div>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1820.9044227492468!2d23.991556006776502!3d49.80209026124684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7bb2a204d0b%3A0x809f6e33e33c5ab4!2sNaukova+Street%2C+25%2C+L&#39;viv%2C+L&#39;vivs&#39;ka+oblast%2C+79000!5e0!3m2!1sen!2sua!4v1557646464806!5m2!1sen!2sua"
-                    width="500" height="300" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5150.290701659679!2d23.992604!3d49.802135!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7bb2a204d0b%3A0x809f6e33e33c5ab4!2sNaukova+Street%2C+25%2C+L&#39;viv%2C+L&#39;vivs&#39;ka+oblast%2C+79000!5e0!3m2!1sen!2sua!4v1557696760138!5m2!1sen!2sua"
+                    width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-            <div class="row">
-                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                    <h3>To call our specialist please fill out and send the form below</h3>
-                    <form method="POST" action="https://formspree.io/tigory8@gmail.com">
-                        <br>
-                        <fieldset>
-                            <label for="client-name">Name:</label>
-                            <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+            <div id="form">
+                <div class="row">
+                    <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <h3>To call our specialist please fill out and send the form below</h3>
+                        <form method="POST" action="https://formspree.io/tigory8@gmail.com">
                             <br>
-                            <label for="client-email">
+                            <fieldset>
+                                <label for="client-name">Name:</label>
+                                <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
+                                <br>
+                                <label for="client-email">
             Email: <input type="email" placeholder="Email"
             id="client-email" name="client-email" required>
                     </label>
-                            <br>
-                            <label for="client-address">Address:</label>
-                            <input type="text" placeholder="Address" id="client-address" name="client-address" required>
-                            <br>
-                            <label for="client-comment">Your comment:</label>
-                            <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
-                            <br>
-                            <input type="submit" value="Submit">
-                            <input type="reset" value="Cancel">
-                        </fieldset>
-                    </form>
-                </article>
-                <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
-                    <h3>Approximate cost calculation of door</h3>
-                    <form class="converter">
-                        <label>
+                                <br>
+                                <label for="client-address">Address:</label>
+                                <input type="text" placeholder="Address" id="client-address" name="client-address" required>
+                                <br>
+                                <label for="client-comment">Your comment:</label>
+                                <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
+                                <br>
+                                <input type="submit" value="Submit">
+                                <input type="reset" value="Cancel">
+                            </fieldset>
+                        </form>
+                    </article>
+                    <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
+                        <h3>Approximate cost calculation of door</h3>
+                        <form class="converter">
+                            <label>
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
-                        <br>
-                        <button class="calculation">Calculation</button>
-                        <br>
-                        <button class="exchange-rate">course UAH to selected currency</button>
-                        <br>
-                        <label>
+                            <br>
+                            <button class="calculation">Calculation</button>
+                            <br>
+                            <button class="exchange-rate">course UAH to selected currency</button>
+                            <br>
+                            <label>
                 <output type="text" name="curr-converted"></output>
             </label>
-                    </form>
-                    <form>
-                        <textarea rows="7" cols="33">
-                    </textarea>
-                        <input type="submit" value="save">
-                        <input class="load" type="button" value="load">
-                    </form>
-                </article>
+                        </form>
+                    </article>
+                </div>
             </div>
         </main>
         <footer>
