--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div class="container">
         <header>
             <div>
+            <div>
                 <img src="img/header.png" alt="Header">
+            </div>
+            <div class="clock"></div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#home">Brone Doors</a>
@@ -49,8 +52,6 @@
             <section id="home">
                 <div class="motto">
                     <h2>Our doors will make your life safer and more comfortable!</h2>
-                    <div class="clock"></div>
-                    <button class="clockToggle">Hide Clock</button>
                 </div>
                 <div class="grid">
                     <div class="g-box box1">
