--- a/index.html
+++ b/index.html
@@ -188,24 +188,26 @@
                     <article class="card col-12 col-sm-12 col-md-6 col-lg-6">
                         <h3>To call our specialist please fill out and send the form below</h3>
                         <form method="POST" action="https://formspree.io/tigory8@gmail.com">
-                            <br>
                             <fieldset>
+                            <div class="form-group">
                                 <label for="client-name">Name:</label>
-                                <input type="text" placeholder="Your name" id="client-name" name="client-name" required>
-                                <br>
+                                <input type="text" placeholder="Your name" class="form-control" id="client-name" name="client-name" required>
+                            </div>
+                            <div class="form-group">
                                 <label for="client-email">
             Email: <input type="email" placeholder="Email"
-            id="client-email" name="client-email" required>
+            class="form-control" id="client-email" aria-describedby="emailHelp"  name="client-email" required>
                     </label>
-                                <br>
+                            </div>
+                            <div class="form-group">
                                 <label for="client-address">Address:</label>
-                                <input type="text" placeholder="Address" id="client-address" name="client-address" required>
-                                <br>
+                                <input type="text" placeholder="Address" class="form-control" id="client-address" name="client-address" required>
+                              </div>
+                             <div class="form-group"> 
                                 <label for="client-comment">Your comment:</label>
-                                <input type="text" placeholder="Additional information" id="client-comment" name="client-comment" required>
-                                <br>
-                                <input type="submit" value="Submit">
-                                <input type="reset" value="Cancel">
+                                <input type="text" placeholder="Additional information" class="form-control" id="client-comment" name="client-comment" required>
+                            </div>  
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </fieldset>
                         </form>
                     </article>
@@ -216,9 +218,8 @@
                 Result: <input type="text" class="display" placeholder="0" readonly name="resultOfCalculation">
             </label>
                             <br>
-                            <button class="calculation">Calculation</button>
-                            <br>
-                            <button class="exchange-rate">course UAH to selected currency</button>
+                            <button class="calculation btn btn-primary">Calculation</button>
+                            <button class="exchange-rate btn btn-primary">course UAH to selected currency</button>
                             <br>
                             <label>
                 <output type="text" name="curr-converted"></output>
